add route for analytic per url
